style:カラー、デザイン変更

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -17,4 +17,10 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
+
+    # Stripe関連のリクエストに対してCSPヘッダーを追加
+    # location /payment/stripe {
+    #     add_header Content-Security-Policy "default-src 'self'; script-src 'self' https://js.stripe.com; style-src 'self';";
+    #     try_files $uri $uri/ /index.php?$query_string;
+    # }
 }
