--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,3 +1,4 @@
+# Ignore files
 /node_modules
 /public/hot
 /public/storage
@@ -7,9 +8,12 @@
 .env.backup
 .phpunit.result.cache
 docker-compose.override.yml
+docker/mysql/data/*.ibd
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+*.log
+/tmp/
