ルート修正、シーダーの変更

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
     nginx:
         image: nginx:1.21.1
+        platform: linux/amd64
         ports:
             - "80:80"
         volumes:
@@ -18,6 +19,7 @@ services:
 
     mysql:
         image: mysql:8.0.26
+        platform: linux/amd64
         environment:
             MYSQL_ROOT_PASSWORD: root
             MYSQL_DATABASE: laravel_db
@@ -43,6 +45,7 @@ services:
 
     mailhog:
         image: mailhog/mailhog
+        platform: linux/amd64
         ports:
         - "8025:8025"
         - "1025:1025"
